Svg button bugfix. Slick fadeout alignment fix.

--- a/scss/_controls.scss
+++ b/scss/_controls.scss
@@ -32,6 +32,12 @@
 		fill: white;
 		transition: $transition;
 	}
+	&.next, &.prev {
+		svg {
+			position: relative;
+			left: 1px;
+		}
+	}
 	&.prev {
 		transform: rotate(180deg);
 	}
@@ -59,6 +65,7 @@
 			height: 17px;
 		}
 		svg {
+			display: block;
 			height: 17px;
 			width: 17px;
 			path {
